[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/Extensions/ExportExtras/Shaders/TransparentChecker.shader" type="Shader" id=1]
[ext_resource path="res://src/Extensions/ExportExtras/Dialogs/Control.gd" type="Script" id=2]
[ext_resource path="res://src/Extensions/ExportExtras/Dialogs/ImportDialog.gd" type="Script" id=4]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 1 )
shader_param/size = 10.0
shader_param/alpha = 1.0
shader_param/color1 = Color( 0.7, 0.7, 0.7, 1 )
shader_param/color2 = Color( 1, 1, 1, 1 )
shader_param/offset = Vector2( 0, 0 )
shader_param/scale = Vector2( 0, 0 )
shader_param/rect_size = Vector2( 0, 0 )
shader_param/follow_movement = false
shader_param/follow_scale = false

[node name="ConfirmationDialog" type="ConfirmationDialog"]
margin_right = 478.0
margin_bottom = 458.0
window_title = "Import Extras"
script = ExtResource( 4 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -36.0

[node name="Preview Container" type="Panel" parent="VBoxContainer"]
margin_right = 462.0
margin_bottom = 358.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TransparentChecker" type="ColorRect" parent="VBoxContainer/Preview Container"]
unique_name_in_owner = true
material = SubResource( 1 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -1.0

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/Preview Container"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/Preview Container/ScrollContainer"]
margin_right = 462.0
margin_bottom = 358.0
rect_min_size = Vector2( 0, 300 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Preview" type="TextureRect" parent="VBoxContainer/Preview Container/ScrollContainer/VBoxContainer"]
unique_name_in_owner = true
margin_right = 462.0
margin_bottom = 358.0
size_flags_horizontal = 3
size_flags_vertical = 3
expand = true
stretch_mode = 6

[node name="SliceGrid" type="Control" parent="VBoxContainer/Preview Container/ScrollContainer/VBoxContainer/Preview"]
unique_name_in_owner = true
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 362.0
margin_right = 462.0
margin_bottom = 386.0
alignment = 1

[node name="Rows" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_left = 102.0
margin_top = 5.0
margin_right = 139.0
margin_bottom = 19.0
text = "Rows:"

[node name="RowsSpinBox" type="SpinBox" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
margin_left = 143.0
margin_right = 217.0
margin_bottom = 24.0
min_value = 1.0
value = 1.0

[node name="Columns" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_left = 221.0
margin_top = 5.0
margin_right = 281.0
margin_bottom = 19.0
text = "Columns:"

[node name="ColumnsSpinBox" type="SpinBox" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
margin_left = 285.0
margin_right = 359.0
margin_bottom = 24.0
min_value = 1.0
value = 1.0

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 390.0
margin_right = 462.0
margin_bottom = 414.0
alignment = 1

[node name="SliceModeButton" type="OptionButton" parent="VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
margin_left = 65.0
margin_right = 124.0
margin_bottom = 24.0
text = "rows"
items = [ "rows", null, false, 0, null, "columns", null, false, 1, null ]
selected = 0

[node name="SplitLayerCheckBox" type="CheckBox" parent="VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
margin_left = 128.0
margin_right = 245.0
margin_bottom = 24.0
text = "Split in Layers"

[node name="CreateProjectCheckBox" type="CheckBox" parent="VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
margin_left = 249.0
margin_right = 397.0
margin_bottom = 24.0
text = "Create new Project"
